Fix co-founder container top and bottom spacing  when scaling down to smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ p {
   margin-top: 5rem;
   width: 100%;
   background-color: #393c42;
-  height: 35vh;
+  /* height: 35vh; */
+  height: fit-content;
 
   display: flex;
   flex-direction: column;
@@ -165,6 +166,7 @@ p {
 .cofounder__container {
   width: 80vw;
   height: 100%;
+  padding: 3rem 0;
 
   display: flex;
   justify-content: space-between;
